856.	[build]		marcinw
	callout_manager.h and server_hooks.h headers are now exported,
	so statically linked libraries can be tested.
	(Github #4, git 00b5f3fa0369c13021bf4fb78c6450e524e4e411)

855.	[build]		fdupont
	Use convenience archives for objects used in a makefile and
	its parent makefile: before sources were compiled twice using
	the broken subdir-objects option of automake, now objects
	are put into a convenience static library (so an archive).
	(Trac #3631, git d7954b4234114d8fa41aa51f671d4faa1724b748)

854.	[bug]		marcin
	Corrected a regression on "make distcheck" which appeared after
	implementation of #3162 (partial fix).
	(Trac #3629, git 9bb6b76a24e4356b30e59631e76e32c3096fb515)

853.	[func]		tomek
	Lease6 now is able to store MAC/hardware address information. Memfile
	memfile backend has been updated to store/retrieve that additional
	piece of information. Server now tries to use available methods to
	obtain MAC/hardware address from incoming packet.
	(Trac #3555, git ab76a9e7a9d39cb3cf533729473b63a2d2401ac7)

852.	[func]		tomek
	Pkt6 class is now able to generate client's MAC from source IPv6
	link-local address if EUI-64 identifier was used.
	(Trac #3549, git d92e76860e6931477b3e60e5be8978302973f88f)

851.	[bug]		tmark
	Corrected a segmentation fault that was occurring under OS-X
	during D2 module shutdown.
	(Trac #3470, git f7822568abd04c12faa3cde34fadaac238a373d3)

850.	[build]		fdupont
	Moved optional gtest sources to ext/gtest.
	(Trac #3162, git 055512758f5c79f29eb375126d496483c9a6d0a1)

849.	[bug]		tomek
	DHCPv6 component now processes incoming vendor-class options
	properly (packets are classified as VENDOR_CLASS_[content of the
	vendor-class option]).
	(Trac #3486, git 62409cd9531b081943b8f3567f7b0dca36b18802)

848.	[func]		fdupont
	Added truncated HMAC support to TSIG, as per RFC 4635.
	(Trac #3593, git ae3a9cd1a0d2dc07b7092368149381d69bc2c61a)

847.	[build]		fdupont
	Removed no longer used configuration option --with-shared-memory